corpus/main.txt
================================================================================
Arrays
================================================================================

[
  345,
  10.1,
  10,
  -10,
  null,
  true,
  false,
  { "stuff": "good" }
]

--------------------------------------------------------------------------------

(top
  (list
    (number)
    (number)
    (number)
    (number)
    (null)
    (true)
    (false)
    (map
      (entry
        (string
          (jsonstring (string_content)))
        (string
          (jsonstring (string_content)))))))

================================================================================
String content
================================================================================

[
  "",
  "abc",
  "def\n",
  "ghi\t",
  "jkl\f",
  "//",
  "/**/"
]

--------------------------------------------------------------------------------

(top
  (list
    (string (jsonstring))
    (string
      (jsonstring (string_content)))
    (string
      (jsonstring (string_content
        (escape_sequence))))
    (string
      (jsonstring (string_content
        (escape_sequence))))
    (string
      (jsonstring (string_content
        (escape_sequence))))
    (string
      (jsonstring (string_content)))
    (string
      (jsonstring (string_content)))))

================================================================================
Top-level numbers
================================================================================

-1

--------------------------------------------------------------------------------

(top
  (number))

================================================================================
Top-level null
================================================================================

null

--------------------------------------------------------------------------------

(top
  (null))

================================================================================
Comments
================================================================================

{
  "a": 1,

  // we allow comments, because several
  // commonly used tools allow comments in
  // files with the extension `.json`
  "b": "2",

  /*
   * Block comments are also ok
   */
  "c": 3
}

--------------------------------------------------------------------------------

(top
  (map
    (entry
      (string
        (jsonstring (string_content)))
      (number))
    (comment)
    (comment)
    (comment)
    (entry
      (string
        (jsonstring (string_content)))
      (string
        (jsonstring (string_content))))
    (comment)
    (entry
      (string
        (jsonstring (string_content)))
      (number))))

====
Numbers
====
|[]|
1
2.32
3.14e-11
-4_25.3E+5
0b1_0_1_0
0X0fa_fa

----
(top
  ;(items)
  (items
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
  )
)